<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="knnekt.presentation.ui.start.signin.SignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/sign_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintBottom_toTopOf="@+id/loginLayout"
            app:layout_constraintStart_toStartOf="@+id/loginLayout" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/passwordLayout"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            app:layout_constraintRight_toLeftOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:text="@={viewModel.login}" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/signInButton"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            app:layout_constraintRight_toLeftOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/loginLayout"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:text="@={viewModel.password}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:enabled="@{!viewModel.noData}"
            android:onClick="@{() -> viewModel.signIn()}"
            android:text="@string/sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            app:layout_constraintRight_toLeftOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />

        <TextView
            android:id="@+id/forgotPasswordLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:padding="4dp"
            android:text="@string/forgot_password"
            app:layout_constraintEnd_toEndOf="@+id/passwordLayout"
            app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="32dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="32dp" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="32dp" />

        <TextView
            android:id="@+id/dontHaveAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toStartOf="@id/signUpLink"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/signInButton"
            app:layout_constraintTop_toBottomOf="@+id/signInButton" />

        <TextView
            android:id="@+id/signUpLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:padding="4dp"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            app:layout_constraintBaseline_toBaselineOf="@id/dontHaveAccountText"
            app:layout_constraintEnd_toEndOf="@id/signInButton"
            app:layout_constraintStart_toEndOf="@id/dontHaveAccountText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>